# Vivid-Engine

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Vivid-Docs/: .~lock.ToDo.ods#  CMakeLists.txt  Dependencies.ods  Doxyfile.in  ToDo.ods  conf.py  index.rst
Vivid-Docs/_templates/: layout.html
Vivid-Docs/res/: Dependencies.ods  Notes.odt  ToDo.ods
Vivid-Docs/res/snippets/: doxygen.xml
Vivid-Docs/vul/: vul.rst
Vivid-Docs/vul/ioc/: ioc.rst  ioc_examples.rst
Vivid-Docs/vul/patterns/: managed_singleton.rst  patterns.rst  raii.rst
Vivid-Project/: CMakeLists.txt
Vivid-Project/VividCore/: CMakeLists.txt
Vivid-Project/VividCore/inc/: namespaces.dox  vividcore_export.h
Vivid-Project/VividCore/inc/vivid_core/app/: application.h  context.h  window.h
Vivid-Project/VividCore/inc/vivid_core/app/context_controllers/: context_controller.h  glfw_context_controller.h
Vivid-Project/VividCore/inc/vivid_core/app/window_controllers/: glfw_window_controller.h  window_controller.h
Vivid-Project/VividCore/inc/vivid_core/memory/: memory_tracker.h
Vivid-Project/VividCore/inc/vivid_core/mtl/threading/: fiber.h
Vivid-Project/VividCore/inc/vivid_core/ui/: ui_api.h  ui_context.h  window.h
Vivid-Project/VividCore/inc/vivid_core/utility/: dependencies.h  engine_info.h  error.h  errors.h  macros.h  pimple_ptr.h
Vivid-Project/VividCore/platform/windows/ui/: windows_ui_context.cpp  windows_ui_context.h  windows_window.cpp  windows_window.h
Vivid-Project/VividCore/src/vivid_core/app/: application.cpp  context.cpp  window.cpp
Vivid-Project/VividCore/src/vivid_core/app/context/: glfw_context_controller.cpp
Vivid-Project/VividCore/src/vivid_core/app/context_controllers/: glfw_context_controller.cpp
Vivid-Project/VividCore/src/vivid_core/app/window_controllers/: glfw_window_controller.cpp
Vivid-Project/VividCore/src/vivid_core/memory/: memory_tracker.cpp
Vivid-Project/VividCore/src/vivid_core/ui/: ui_api.cpp  ui_context.cpp  window.cpp
Vivid-Project/VividCore/src/vivid_core/utility/: dependencies.cpp  engine_info.cpp
Vivid-Project/VividGame/: CMakeLists.txt
Vivid-Project/VividGame/src/: main.cpp
Vivid-Project/VividTests/: CMakeLists.txt
Vivid-Project/VividTests/src/: tests.cpp  tests_memory.cpp
Vivid-Project/vul/: CMakeLists.txt
Vivid-Project/vul/inc/: core.h  errors.h
Vivid-Project/vul/inc/helpers/: trick_expand_type.h  trick_has_mfunction.h
Vivid-Project/vul/inc/ioc/: di.h  di_basic_scope.h  di_scope.h  di_scope_singleton.h  di_scope_transient.h
Vivid-Project/vul/inc/patterns/: managed_singleton.h  raii.h
Vivid-Project/vul/src/: errors.cpp
Vivid-Project/vul/tests/: CMakeLists.txt  test_di.cpp
Vivid-Project/vul/tests/patterns/: test_managed_singleton.cpp  test_raii.cpp
Vivid-Project/vul/tests/tricks/: test_expand_type.cpp  test_has_mfunction.cpp
docs/: .buildinfo  Project Structure.drawio  Project Structure.vsdx  ToDo.ods  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/vul/: vul.doctree
docs/.doctrees/vul/ioc/: ioc.doctree
docs/.doctrees/vul/patterns/: managed_singleton.doctree  patterns.doctree  raii.doctree
docs/_sources/: index.rst.txt
docs/_sources/vul/: vul.rst.txt
docs/_sources/vul/ioc/: ioc.rst.txt
docs/scripts/: prism.js
docs/styles/: prism.css
docs/vul/: vul.html
docs/vul/ioc/: ioc.html
docs/vul/patterns/: managed_singleton.html  patterns.html  raii.html
