file(GLOB_RECURSE SRC_FILES src/*.cpp)
file(GLOB_RECURSE INC_FILES inc/*.h)
file(GLOB_RECURSE INP_FILES inc_private/*.h)
# message(STATUS ${SRC_FILES})
add_executable(VividTests ${SRC_FILES})
set_target_properties(VividCore PROPERTIES LINKER_LANGUAGE CXX)
# target_compile_features(app PRIVATE cxx_std_17)
target_link_libraries(VividTests PRIVATE VividCore)
target_include_directories(VividTests PRIVATE ${VividProject_SOURCE_DIR}/VividCore/src)
target_include_directories(VividTests PRIVATE inc)
